--- a/k8s/bases/apps/nextcloud/cnpg-cluster.yaml
+++ b/k8s/bases/apps/nextcloud/cnpg-cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  name: nextcloud
+  name: postgresql
   namespace: nextcloud
 spec:
   instances: 3
