--- a/k8s/distributions/omni/infrastructure/controllers/kustomization.yaml
+++ b/k8s/distributions/omni/infrastructure/controllers/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../../../bases/infrastructure/controllers/
+  - cloudflared/
   - hcloud-csi/
   - kubelet-serving-cert-approver/
   - origin-ca-issuer/
