fix(nextcloud): update external database host to db-rw.nextcloud
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/bases/apps/nextcloud/helm-release.yaml
+++ b/k8s/bases/apps/nextcloud/helm-release.yaml
@@ -28,7 +28,7 @@ spec:
     externalDatabase:
       enabled: true
       type: postgresql
-      host: postgresql.nextcloud
+      host: db-rw.nextcloud
       database: nextcloud
       existingSecret:
         enabled: true
