--- a/k8s/bases/apps/nextcloud/db/db-cluster.yaml
+++ b/k8s/bases/apps/nextcloud/db/db-cluster.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   instances: 1
   storage:
-    size: 100Gi
+    size: ${nextcloud_db_storage_size:=1Gi}
   bootstrap:
     initdb:
       database: nextcloud
