fix(nextcloud): enable phpClientHttpsFix in Helm release configuration
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/bases/apps/nextcloud/helm-release.yaml
+++ b/k8s/bases/apps/nextcloud/helm-release.yaml
@@ -26,6 +26,8 @@ spec:
     service:
       annotations:
         traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
+    phpClientHttpsFix:
+      enabled: true
     internalDatabase:
       enabled: false
     externalDatabase:
