fix(secrets): update nextcloud password and metadata in cluster secret
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/clusters/prod/variables/variables-cluster-secret.enc.yaml
+++ b/k8s/clusters/prod/variables/variables-cluster-secret.enc.yaml
@@ -8,6 +8,7 @@ stringData:
     dex_client_secret: ENC[AES256_GCM,data:gVxwZqx8/LVQlRttnuMNIpVy89E=,iv:klCgOiWBp3k6HUOzs6KcpfM9KdxTUVRTdNqYevH0kZ8=,tag:Vc1AAeIZR61k/Crwe8uBxg==,type:str]
     github_app_client_secret: ENC[AES256_GCM,data:iTVC+ZemjyoxPthDHOAH1sE3JHvtI9pU4jyvcaU5Ec2L4dDolD/FBg==,iv:fl/QlG04RFi1//G7UUqS3duqTRYqc3feka6/jmp+chc=,tag:PwHi7b5MCk0qBDR2NairEQ==,type:str]
     hcloud_token: ENC[AES256_GCM,data:yhjuxpL/mVZ+yopyzXdncZXv0qzwaAs2Dad5ePoNqhP5wVhSu0aahbFAYXwGLXnI2A1KeF+ItrERVzXE0jOD3A==,iv:mD2ohoDGcti6z/d5WEXVDc+ftBKZOrxTlQykIWcaDcU=,tag:xq9p2FsdLEN+IOxbf73qxQ==,type:str]
+    nextcloud_password: ENC[AES256_GCM,data:uszfQlZHrzgENY2LO6ky/2vlljJJHcW7AWPQtymqJLso/51NTtf0jhY=,iv:ihEBC/X0wuBM90wJjPMx/5gr0plYMfWEpHpLw22ZhDk=,tag:Wjv/Q+Xtp0VSF7PlPzRiJQ==,type:str]
     oauth2_proxy_cookie_secret: ENC[AES256_GCM,data:OcnWJyQfQ6OUdHr5YxYe2CmOSw8w7q0rit8CCP6Z9QlXqy4q1Yne1Ck3rU4=,iv:aReO3UrPimKuFEwkKeU+QLdXzTBALRWcFpHlVb+Cp6w=,tag:rMtxdbigYrbSn0GnoVkCAQ==,type:str]
 sops:
     age:
@@ -20,7 +21,7 @@ sops:
             YTF5eFRrUGlvZkZGdmx5UzI3WWRvRTQKzSuBSfK89EvVDbT483Wgek2dZWWa2M2r
             qDk/Sua5xcRVPSG93fJPngVPSKeJK/HLArjDMbwueZrhCHx5mZIirA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-05-31T17:59:45Z"
-    mac: ENC[AES256_GCM,data:PM/XDeTionbG/qnAYrrfNcTV22PdWBZVNd5ogrzKsmwYTpGShdabHvD1vow251uz15ksgNeuhyAFohkKl1NepFGhdrvoi2h11CjauWWBhYXE7YtU8XTyw3DEohJl53yEbyZI3Etn4RbtFqI99ekhjBHRW8SuAYpRoD2WjRSVKas=,iv:NsU9qBsJT0q9xs9ZSN0227GGUhqh0GIK82TsDYoiSi4=,tag:yE0h1D3bl8D+an5b8k4q3g==,type:str]
+    lastmodified: "2025-06-15T23:30:52Z"
+    mac: ENC[AES256_GCM,data:tGoL84ZDW2Q3EOo5QczWpQxwgminzThulCVtqQXpCqHZUWIQdebs2sAQQ/UvUmJHClMyMANSBh0yewiXX9T2St9ePmMWldaOcC0cFsIa0h952HJmxPuugsMRvFYvhlM1UQaIubbLe+CyyTyxz4h6ZdMlLDzn4jVisP4mPya0IGg=,iv:N661N6xj4Dyx1kKnHzl8wfG+eavBh1Q91LuoQEjpnl4=,tag:0QrE/FFn4U0KmzOdzCYkkg==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
