fix(secrets): reorder nextcloud password and oauth2 proxy cookie secret in cluster secret
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/clusters/dev/variables/variables-cluster-secret.enc.yaml
+++ b/k8s/clusters/dev/variables/variables-cluster-secret.enc.yaml
@@ -7,8 +7,9 @@ stringData:
     cloudflared_tunnel_token: ENC[AES256_GCM,data:4tOBWKE1yyE8E/KDYs1WLEgc8G4vA8RblPjQIhwsyB2oDrAnjj2huhERYUrjjWYYGmqieBNEu6DkdjTTSkFhmJcZLkupQxfuAq61Pki8sVJEmCGEquLq371Id2b1RHhw+wKeYnrEL+cC1JFeD/aKX4K3OtVpGFQpZZhLU1BpNlnlauDz1rb7HYwsFuq2EG6w8atpa7d1Y/GaI0DPwEMMX0lt+5Ro3TYv3cGzxpHfom0Xd6f67pLAaQ==,iv:oaIENBgzjwSiI8fdcxmSRtnDMVb9neYAWDYX2yFb9nM=,tag:yoKHrocg+fP8Z7EvgYwoBA==,type:str]
     dex_client_secret: ENC[AES256_GCM,data:6D86xil65d0mqWyA6+293nSaD3M=,iv:NwnidZmqV1FEYoPzXiVuBFLea4yl1wquzx9mCP9QajI=,tag:gT4M6vauYFMJ8H0M2cyGvg==,type:str]
     github_app_client_secret: ENC[AES256_GCM,data:ZRl5HhAsRN0OWFrz9bwbyALETyV7rMUGB/C/98pUDoSDTxUsouKg1Q==,iv:p3ugJvnPiZgJOWnggBWFgXNAaNXRxTMCi3+86lHCgUU=,tag:mIOVh1KoONuJmjz67egYxw==,type:str]
-    oauth2_proxy_cookie_secret: ENC[AES256_GCM,data:ju6ek+8TeEQWaHBgj88iTA6Ey7cvbeL3SdQykganKwdkk6GTsjj2VO/bKPs=,iv:me5/Zo90lBf0PEmVd//AfCF4RToj+dTvS2ayKZbVqbM=,tag:yKbBqNtnyD6lbtn5IUh5mg==,type:str]
     hcloud_token: ENC[AES256_GCM,data:0PCFWpWVHq2yODo1Owyjihj9qv/eckbWk4w8YVru+jG+p1mfgz5ipHHz+zUkv39v3pjUYvrPwRwJLJhMhY4ERQ==,iv:EndM1Zi8yo6AHokKMVjNiryLMx7oiKpND6UCtz/M4DI=,tag:aABKuGrrclZZKl4SvtjXAQ==,type:str]
+    nextcloud_password: ENC[AES256_GCM,data:HBtHVLszEDg121lGyItNlmN5d9GNH4bVHx2ERY6c624ZBRLhzmZq1KI=,iv:/BZW3UtHQ8TKZ0OYeKKNrqSyhw84JAt3Ze6fNa1V3oQ=,tag:l2574z4qFvOXfehPrW4oBw==,type:str]
+    oauth2_proxy_cookie_secret: ENC[AES256_GCM,data:ju6ek+8TeEQWaHBgj88iTA6Ey7cvbeL3SdQykganKwdkk6GTsjj2VO/bKPs=,iv:me5/Zo90lBf0PEmVd//AfCF4RToj+dTvS2ayKZbVqbM=,tag:yKbBqNtnyD6lbtn5IUh5mg==,type:str]
 sops:
     age:
         - recipient: age188ez3ur89qj7pmnyyqhcp9nmxp7lvsa72plph0frkfh9tt7n5guqs0vz6c
@@ -20,7 +21,7 @@ sops:
             bit4OGl5QVBJV2tMYTA4SjJHN1VkWVkKuOtlVdLXYA/Xhij3RttbU8crRx3brSVu
             MUfT1wTTowU3AkI2mX5AXO3v4IVqYmo6CNn60PeKUzOGfJdDjjzfOA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-05-31T18:00:02Z"
-    mac: ENC[AES256_GCM,data:i4yQpAyd/X3E6TYsjzlOwDhoSXR1WLB96ACxbxpnLzW7o85uzX4yqrKosueZFEcKjGbWT4bivwgEa0FubpL6E43o3ZiGCtuS5z2vOJ8FWpBJUkgKoSoBqDr1o4xpq7Mq59UdRwnL0m1pBojCwyGjLypfri3jdd5UDqokO6WQvog=,iv:u3WhfMZ2ovlMuf+JkdWesUuL7sz79A/oKrixPGDP6zQ=,tag:HT1qGjfePzvmN9cQkLJCWw==,type:str]
+    lastmodified: "2025-06-15T23:32:46Z"
+    mac: ENC[AES256_GCM,data:G4Tg5gUjlBxxwDd2OiPclUDIWOuPMdSwxdjIQPWQRpHUCGXgAKAGo1qCPdk3lDFe28hbkUT3Dfgd/PMoqI+ZHJIfpidqVNZB5REiEAX8Bo6QxYMkQtid5eFPSQRe0O8Lh7tJNoWZaIvDoDbUHK/ZHmEiw/yz8TVQVb11MvXaftg=,iv:UMcxjuzt6NVuDAt/EJfKiqhZ8xQarTsTzgOuedUX970=,tag:cpbIKSY0DD7UZ+21wIIT+g==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
