chore(nextcloud): add TODOs for SendGrid email provider and SMTP configuration
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/bases/apps/nextcloud/helm-release.yaml
+++ b/k8s/bases/apps/nextcloud/helm-release.yaml
@@ -45,5 +45,9 @@ spec:
         type: RollingUpdate
       existingSecret:
         enabled: true
+      # TODO: Configure SendGrid email provider
+      # TODO: Add SMTP configuration for nextcloud
+      # mail:
+      #   enabled: true
     persistence:
       enabled: true
