feat(middlewares): add headers middleware and update forward-auth configuration
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/bases/infrastructure/controllers/oauth2-proxy/helm-release.yaml
+++ b/k8s/bases/infrastructure/controllers/oauth2-proxy/helm-release.yaml
@@ -37,3 +37,6 @@ spec:
       enabled: true
       hosts:
         - oauth2-proxy.${domain}
+      annotations:
+        traefik.ingress.kubernetes.io/router.middlewares: traefik-headers@kubernetescrd
+
