--- a/.github/workflows/sync-cluster-policies.yaml
+++ b/.github/workflows/sync-cluster-policies.yaml
@@ -22,7 +22,7 @@ jobs:
 
     steps:
       - name: Generate GitHub App Token
-        uses: tibdex/github-app-token@v2
+        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2.1.0
         id: generate-token
         with:
           app_id: ${{ vars.APP_ID }}
@@ -30,6 +30,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          persist-credentials: false
           token: ${{ steps.generate-token.outputs.token }}
       - name: Download latest Cluster Policies
         run: |
