feat(weave-gitops): add helm release and related resources
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/clusters/dev/variables/variables-cluster-secret.enc.yaml
+++ b/k8s/clusters/dev/variables/variables-cluster-secret.enc.yaml
@@ -10,6 +10,7 @@ stringData:
     hcloud_token: ENC[AES256_GCM,data:0PCFWpWVHq2yODo1Owyjihj9qv/eckbWk4w8YVru+jG+p1mfgz5ipHHz+zUkv39v3pjUYvrPwRwJLJhMhY4ERQ==,iv:EndM1Zi8yo6AHokKMVjNiryLMx7oiKpND6UCtz/M4DI=,tag:aABKuGrrclZZKl4SvtjXAQ==,type:str]
     nextcloud_password: ENC[AES256_GCM,data:HBtHVLszEDg121lGyItNlmN5d9GNH4bVHx2ERY6c624ZBRLhzmZq1KI=,iv:/BZW3UtHQ8TKZ0OYeKKNrqSyhw84JAt3Ze6fNa1V3oQ=,tag:l2574z4qFvOXfehPrW4oBw==,type:str]
     oauth2_proxy_cookie_secret: ENC[AES256_GCM,data:ju6ek+8TeEQWaHBgj88iTA6Ey7cvbeL3SdQykganKwdkk6GTsjj2VO/bKPs=,iv:me5/Zo90lBf0PEmVd//AfCF4RToj+dTvS2ayKZbVqbM=,tag:yKbBqNtnyD6lbtn5IUh5mg==,type:str]
+    weave_gitops_admin_password: ENC[AES256_GCM,data:ycx63XD++XXloHpVvt1rYlGcqoSDW89jN0DvHtyhYi9qtF2hJQsP7MY=,iv:h/GPG2JWliE+yjBq+/fH2WAZH1jNxZVRn62Hx1nJlG0=,tag:FmvIcMy/V041obU00WyniQ==,type:str]
 sops:
     age:
         - recipient: age188ez3ur89qj7pmnyyqhcp9nmxp7lvsa72plph0frkfh9tt7n5guqs0vz6c
@@ -21,7 +22,7 @@ sops:
             bit4OGl5QVBJV2tMYTA4SjJHN1VkWVkKuOtlVdLXYA/Xhij3RttbU8crRx3brSVu
             MUfT1wTTowU3AkI2mX5AXO3v4IVqYmo6CNn60PeKUzOGfJdDjjzfOA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-15T23:32:46Z"
-    mac: ENC[AES256_GCM,data:G4Tg5gUjlBxxwDd2OiPclUDIWOuPMdSwxdjIQPWQRpHUCGXgAKAGo1qCPdk3lDFe28hbkUT3Dfgd/PMoqI+ZHJIfpidqVNZB5REiEAX8Bo6QxYMkQtid5eFPSQRe0O8Lh7tJNoWZaIvDoDbUHK/ZHmEiw/yz8TVQVb11MvXaftg=,iv:UMcxjuzt6NVuDAt/EJfKiqhZ8xQarTsTzgOuedUX970=,tag:cpbIKSY0DD7UZ+21wIIT+g==,type:str]
+    lastmodified: "2025-07-03T19:04:25Z"
+    mac: ENC[AES256_GCM,data:GJG1hhr14hkRK8DmBxfcM9j1B9hyAFnDKqNr2piFlpPMyxDJ7VGy85WumJTpzqoZ3MOXWu9vvs2nghvTSYMy26zOH1KPQs+HtVn3bglZZOWrjwpSHLuZPyfkIbvXFt2IfRWH95qwOMu/SO5Xwg9zoEaUQqD/GSRsfxpsCRcXzLM=,iv:dcasXAh3jW+TY2PKRjHW56QKxdNaKPY7v+QqPdrG+5o=,tag:VadPA5VPYVl1A6HXEW6Hjg==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
