fix(secrets): update weave_gitops_admin_password and remove hardcoded values
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/bases/apps/weave-gitops/cluster-user-auth-secret.yaml
+++ b/k8s/bases/apps/weave-gitops/cluster-user-auth-secret.yaml
@@ -6,4 +6,5 @@ metadata:
 type: Opaque
 stringData:
   username: devantler
-  password: ${weave_gitops_admin_password:=admin}
+  # password: admin
+  password: ${weave_gitops_admin_password:=$2a$10$wdBwQCe9wNBK3EadbIZwPOoPZt6RnqjOZuwUZlFVsISEo5l8jiQbq}
