--- a/k8s/clusters/prod/variables/variables-cluster-secret.enc.yaml
+++ b/k8s/clusters/prod/variables/variables-cluster-secret.enc.yaml
@@ -10,6 +10,8 @@ stringData:
     hcloud_token: ENC[AES256_GCM,data:yhjuxpL/mVZ+yopyzXdncZXv0qzwaAs2Dad5ePoNqhP5wVhSu0aahbFAYXwGLXnI2A1KeF+ItrERVzXE0jOD3A==,iv:mD2ohoDGcti6z/d5WEXVDc+ftBKZOrxTlQykIWcaDcU=,tag:xq9p2FsdLEN+IOxbf73qxQ==,type:str]
     nextcloud_password: ENC[AES256_GCM,data:uszfQlZHrzgENY2LO6ky/2vlljJJHcW7AWPQtymqJLso/51NTtf0jhY=,iv:ihEBC/X0wuBM90wJjPMx/5gr0plYMfWEpHpLw22ZhDk=,tag:Wjv/Q+Xtp0VSF7PlPzRiJQ==,type:str]
     oauth2_proxy_cookie_secret: ENC[AES256_GCM,data:OcnWJyQfQ6OUdHr5YxYe2CmOSw8w7q0rit8CCP6Z9QlXqy4q1Yne1Ck3rU4=,iv:aReO3UrPimKuFEwkKeU+QLdXzTBALRWcFpHlVb+Cp6w=,tag:rMtxdbigYrbSn0GnoVkCAQ==,type:str]
+    #ENC[AES256_GCM,data:KiyCFpvyXdmIk0jb9w7nfAIOLCk2JWPfg68xNcboBFClNj0lmjxLTDWih42X7UMdaNRQ3H5ojkcgUEbY7w4fr0fdKUnnsOU=,iv:a834SzeB+UFqJxekA/iSNvek8jmJBZXM8q/0iMyGYUg=,tag:SnLESVHsqBLEyFEKHm3T0g==,type:comment]
+    weave_gitops_admin_password: ENC[AES256_GCM,data:BJSql+q7Go1egYeBhS7bbDzxRD/3BU5sTjAxTVVNHnJik7q4Q6u6a5cNWmZNBlpIiI6ykMM5rv7oFeQM,iv:ZQ3Bk7H2keS8un/KTfJB0lYlvwK+NqkZzjuWcMy8d+8=,tag:JELMKmqWDJsl4fRBGVcl8A==,type:str]
 sops:
     age:
         - recipient: age1rk6fs67kly3h4zux5za429z3grjtvs8vcunav4sa28pxk738najsk8wgs6
@@ -21,7 +23,7 @@ sops:
             YTF5eFRrUGlvZkZGdmx5UzI3WWRvRTQKzSuBSfK89EvVDbT483Wgek2dZWWa2M2r
             qDk/Sua5xcRVPSG93fJPngVPSKeJK/HLArjDMbwueZrhCHx5mZIirA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-15T23:30:52Z"
-    mac: ENC[AES256_GCM,data:tGoL84ZDW2Q3EOo5QczWpQxwgminzThulCVtqQXpCqHZUWIQdebs2sAQQ/UvUmJHClMyMANSBh0yewiXX9T2St9ePmMWldaOcC0cFsIa0h952HJmxPuugsMRvFYvhlM1UQaIubbLe+CyyTyxz4h6ZdMlLDzn4jVisP4mPya0IGg=,iv:N661N6xj4Dyx1kKnHzl8wfG+eavBh1Q91LuoQEjpnl4=,tag:0QrE/FFn4U0KmzOdzCYkkg==,type:str]
+    lastmodified: "2025-07-03T19:28:32Z"
+    mac: ENC[AES256_GCM,data:OIVRunerhUPFjMfWDBqzwM9ZDZ1nIQVpW99Kv7F/Z+kmu0iD+u7sgwN/17B5I0nPihJ9IrlEnT7Bi8M/tehzEeZJKe27Pomq1QWZfNR7tC4UktFBCGOYSD3n+qctpJEdP0rXaLJFg9+t7JjGhKvIfQiD3EVGWZ4jMlLXT+jfq9M=,iv:Ofi1NK/2SL+b7BSgmVsbdWzVlpN3M3s/TuWoJarhDuc=,tag:mmMTGr2o0l3kzmMHXGOjrw==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
