fix(ingress): uncomment traefik middleware annotations for weave-gitops
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/bases/apps/weave-gitops/helm-release.yaml
+++ b/k8s/bases/apps/weave-gitops/helm-release.yaml
@@ -22,8 +22,8 @@ spec:
       username: devantler
     ingress:
       enabled: true
-      # annotations:
-      #   traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
+      annotations:
+        traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
       hosts:
         - host: weave-gitops.${domain}
           paths:
