--- a/k8s/clusters/dev/variables/variables-cluster-secret.enc.yaml
+++ b/k8s/clusters/dev/variables/variables-cluster-secret.enc.yaml
@@ -10,6 +10,8 @@ stringData:
     hcloud_token: ENC[AES256_GCM,data:0PCFWpWVHq2yODo1Owyjihj9qv/eckbWk4w8YVru+jG+p1mfgz5ipHHz+zUkv39v3pjUYvrPwRwJLJhMhY4ERQ==,iv:EndM1Zi8yo6AHokKMVjNiryLMx7oiKpND6UCtz/M4DI=,tag:aABKuGrrclZZKl4SvtjXAQ==,type:str]
     nextcloud_password: ENC[AES256_GCM,data:HBtHVLszEDg121lGyItNlmN5d9GNH4bVHx2ERY6c624ZBRLhzmZq1KI=,iv:/BZW3UtHQ8TKZ0OYeKKNrqSyhw84JAt3Ze6fNa1V3oQ=,tag:l2574z4qFvOXfehPrW4oBw==,type:str]
     oauth2_proxy_cookie_secret: ENC[AES256_GCM,data:ju6ek+8TeEQWaHBgj88iTA6Ey7cvbeL3SdQykganKwdkk6GTsjj2VO/bKPs=,iv:me5/Zo90lBf0PEmVd//AfCF4RToj+dTvS2ayKZbVqbM=,tag:yKbBqNtnyD6lbtn5IUh5mg==,type:str]
+    #ENC[AES256_GCM,data:g4PUHJjp98qINhXWr3rpG4MaKiMVwy45gsjwDHCxL29RV/8GYOPiP0RcpcSceVLwHGyGLfVSpF/MEbwNd9EGuhYN7PQR7xg=,iv:94SsxnrV7lMPmQatLQFUEM1ohm4XwZOGjhnsY2fvIW4=,tag:TwlTw3QzlyS5F7M01LFv6Q==,type:comment]
+    weave_gitops_admin_password: ENC[AES256_GCM,data:pofc5uF63r03uo1n3wfAMdcWB6ZB3Fv5PsC1OmmyIvfDiZc8ZWN1/i79gCDAJOX1rAmedZlTfiU6WmDm,iv:6SzXOW40Yt6KXwiN4hiK3bZ0ixN6g7HpqV9TMy2vbyc=,tag:dxtIKvWcT4vJ7wUkT0z8ug==,type:str]
 sops:
     age:
         - recipient: age188ez3ur89qj7pmnyyqhcp9nmxp7lvsa72plph0frkfh9tt7n5guqs0vz6c
@@ -21,7 +23,7 @@ sops:
             bit4OGl5QVBJV2tMYTA4SjJHN1VkWVkKuOtlVdLXYA/Xhij3RttbU8crRx3brSVu
             MUfT1wTTowU3AkI2mX5AXO3v4IVqYmo6CNn60PeKUzOGfJdDjjzfOA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-15T23:32:46Z"
-    mac: ENC[AES256_GCM,data:G4Tg5gUjlBxxwDd2OiPclUDIWOuPMdSwxdjIQPWQRpHUCGXgAKAGo1qCPdk3lDFe28hbkUT3Dfgd/PMoqI+ZHJIfpidqVNZB5REiEAX8Bo6QxYMkQtid5eFPSQRe0O8Lh7tJNoWZaIvDoDbUHK/ZHmEiw/yz8TVQVb11MvXaftg=,iv:UMcxjuzt6NVuDAt/EJfKiqhZ8xQarTsTzgOuedUX970=,tag:cpbIKSY0DD7UZ+21wIIT+g==,type:str]
+    lastmodified: "2025-07-03T19:26:42Z"
+    mac: ENC[AES256_GCM,data:e4n4VSoRDH49/Dr0aUMv8ghLXqJ5DPeSEOGcOF1RkWUqLnbaA7YQC+ZObD9ZdmAXZ1E1s3y8L7hf7e+0HzbZ02eIhROUqbOxOiYBt8IzEONlfvDQ/8NPWv85cGTts9UabQA3ya+WzGKgG4gM9otPXu2tWs/1Z9sNKd6PG9/MVBE=,iv:SXM1rrRaVugScQKWQlLQaD+kBmNTCfCEgmJskEYLV04=,tag:LCScYfO4I6qlanajxwScoQ==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
