--- a/k8s/distributions/omni/infrastructure/controllers/cloudflared/helm-release.yaml
+++ b/k8s/distributions/omni/infrastructure/controllers/cloudflared/helm-release.yaml
@@ -28,16 +28,21 @@ spec:
                 value:
                   - cloudflared
                   - tunnel
-                  - --protocol
-                  - http2
                   - --no-autoupdate
                   - --metrics
                   - 0.0.0.0:2000
                   - run
+              - op: replace
+                path: /spec/template/spec/containers/0/env
+                value:
+                  - name: CLOUDFLARED_QUIC_INITIAL_PACKET_SIZE
+                    value: "1230"
   # https://github.com/cloudflare/helm-charts/blob/main/charts/cloudflare-tunnel-remote/values.yaml
   values:
     cloudflare:
       tunnel_token: ${cloudflared_tunnel_token}
     image:
+      repository: ghcr.io/nobles5e/cloudflared/cloudflared
       pullPolicy: Always
+      tag: latest
 
