fix(cloudflared): add missing 'cloudflared' command to Helm release configuration
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/distributions/omni/infrastructure/controllers/cloudflared/helm-release.yaml
+++ b/k8s/distributions/omni/infrastructure/controllers/cloudflared/helm-release.yaml
@@ -26,6 +26,7 @@ spec:
               - op: replace
                 path: /spec/template/spec/containers/0/command
                 value:
+                  - cloudflared
                   - tunnel
                   - --no-autoupdate
                   - --metrics
