fix(cloudflared): comment out environment variable addition for TUNNEL_DISABLE_QUIC_PMTU
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/distributions/omni/infrastructure/controllers/cloudflared/helm-release.yaml
+++ b/k8s/distributions/omni/infrastructure/controllers/cloudflared/helm-release.yaml
@@ -31,11 +31,11 @@ spec:
                   - --no-autoupdate
                   - --metrics
                   - 0.0.0.0:2000
-              - op: add
-                path: /spec/template/spec/containers/0/env/-
-                value:
-                  name: TUNNEL_DISABLE_QUIC_PMTU
-                  value: true
+            # - op: add
+            #   path: /spec/template/spec/containers/0/env/-
+            #   value:
+            #     name: CLOUDFLARED_QUIC_INITIAL_PACKET_SIZE
+            #     value: "1230"
   # https://github.com/cloudflare/helm-charts/blob/main/charts/cloudflare-tunnel-remote/values.yaml
   values:
     cloudflare:
