--- a/k8s/distributions/omni/infrastructure/controllers/cloudflared/helm-release.yaml
+++ b/k8s/distributions/omni/infrastructure/controllers/cloudflared/helm-release.yaml
@@ -17,23 +17,26 @@ spec:
         name: cloudflared
   # TODO: Remove postRenderers when Cilium supports QUIC protocol for cloudflared (https://github.com/cilium/cilium/issues/37529)
   postRenderers:
-    - kustomize:
-        patches:
-          - target:
-              kind: Deployment
-              name: cloudflared-cloudflare-tunnel-remote
-            patch: |
-              - op: add
-                path: /spec/template/spec/containers/0/env/-
-                value:
-                  name: CLOUDFLARED_QUIC_INITIAL_PACKET_SIZE
-                  value: "1250"
+     - kustomize:
+         patches:
+           - target:
+               kind: Deployment
+               name: cloudflared-cloudflare-tunnel-remote
+             patch: |
+               - op: replace
+                 path: /spec/template/spec/containers/0/command
+                 value:
+                   - cloudflared
+                   - tunnel
+                   - --protocol
+                   - http2
+                   - --no-autoupdate
+                   - --metrics
+                   - 0.0.0.0:2000
+                   - run
   # https://github.com/cloudflare/helm-charts/blob/main/charts/cloudflare-tunnel-remote/values.yaml
   values:
-    cloudflare:
-      tunnel_token: ${cloudflared_tunnel_token}
-    image:
-      pullPolicy: Always
-      # TODO: Remove custom image when Cilium supports QUIC protocol for cloudflared (https://github.com/cilium/cilium/issues/37529)
-      repository: ghcr.io/nobles5e/cloudflared/cloudflared
-      tag: latest
+     cloudflare:
+       tunnel_token: ${cloudflared_tunnel_token}
+     image:
+       pullPolicy: Always
