--- a/k8s/distributions/omni/infrastructure/controllers/cloudflared/helm-release.yaml
+++ b/k8s/distributions/omni/infrastructure/controllers/cloudflared/helm-release.yaml
@@ -15,29 +15,28 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: cloudflared
-  # TODO: Remove when Cilium supports QUIC protocol for cloudflared (https://github.com/cilium/cilium/issues/37529)
+  # TODO: Remove postRenderers when Cilium supports QUIC protocol for cloudflared (https://github.com/cilium/cilium/issues/37529)
   postRenderers:
-    - kustomize:
-        patches:
-          - target:
-              kind: Deployment
-              name: cloudflared-cloudflare-tunnel-remote
-            patch: |
-              - op: replace
-                path: /spec/template/spec/containers/0/command
-                value:
-                  - cloudflared
-                  - tunnel
-                  - --protocol
-                  - http2
-                  - --no-autoupdate
-                  - --metrics
-                  - 0.0.0.0:2000
-                  - run
+     - kustomize:
+         patches:
+           - target:
+               kind: Deployment
+               name: cloudflared-cloudflare-tunnel-remote
+             patch: |
+               - op: replace
+                 path: /spec/template/spec/containers/0/command
+                 value:
+                   - cloudflared
+                   - tunnel
+                   - --protocol
+                   - http2
+                   - --no-autoupdate
+                   - --metrics
+                   - 0.0.0.0:2000
+                   - run
   # https://github.com/cloudflare/helm-charts/blob/main/charts/cloudflare-tunnel-remote/values.yaml
   values:
-    cloudflare:
-      tunnel_token: ${cloudflared_tunnel_token}
-    image:
-      pullPolicy: Always
-
+     cloudflare:
+       tunnel_token: ${cloudflared_tunnel_token}
+     image:
+       pullPolicy: Always
