fix(homepage): update helm repository URL to OCI format
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/bases/apps/homepage/helm-repository.yaml
+++ b/k8s/bases/apps/homepage/helm-repository.yaml
@@ -4,4 +4,5 @@ metadata:
   name: homepage
   namespace: homepage
 spec:
-  url: https://jameswynn.github.io/helm-charts/
+  url: oci://ghcr.io/m0nsterrr/helm-charts
+  type: oci
