--- a/k8s/bases/apps/homepage/helm-release.yaml
+++ b/k8s/bases/apps/homepage/helm-release.yaml
@@ -32,19 +32,47 @@ spec:
   # ---
   # https://github.com/M0NsTeRRR/helm-charts/blob/main/charts/homepage/values.yaml
   values:
-    ingress:
-      main:
-        enabled: true
-        hosts:
-          - host: ${domain}
-            paths:
-              - path: /
-                pathType: ImplementationSpecific
-        annotations:
-          traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
-    env:
-      - name: HOMEPAGE_ALLOWED_HOSTS
-        value: ${domain}
+    replicaCount: ${homepage_replicas:=2}
     config:
       allowedHosts:
         - ${domain}
+    ingress:
+      enabled: true
+      hosts:
+        - host: ${domain}
+          paths:
+            - path: /
+              pathType: ImplementationSpecific
+      annotations:
+        traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
+    volumes:
+      - name: config
+        configMap:
+          name: config
+    volumeMounts:
+      - mountPath: /app/config/custom.js
+        name: config
+        subPath: custom.js
+      - mountPath: /app/config/custom.css
+        name: config
+        subPath: custom.css
+      - mountPath: /app/config/bookmarks.yaml
+        name: config
+        subPath: bookmarks.yaml
+      - mountPath: /app/config/docker.yaml
+        name: config
+        subPath: docker.yaml
+      - mountPath: /app/config/kubernetes.yaml
+        name: config
+        subPath: kubernetes.yaml
+      - mountPath: /app/config/services.yaml
+        name: config
+        subPath: services.yaml
+      - mountPath: /app/config/settings.yaml
+        name: config
+        subPath: settings.yaml
+      - mountPath: /app/config/widgets.yaml
+        name: config
+        subPath: widgets.yaml
+      - mountPath: /app/config/logs
+        name: logs
