feat(metrics-server): add HelmRelease patch for metrics-server
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/distributions/kind/infrastructure/controllers/kustomization.yaml
+++ b/k8s/distributions/kind/infrastructure/controllers/kustomization.yaml
@@ -8,6 +8,11 @@ resources:
 patches:
   - target:
       kind: HelmRelease
+      name: metrics-server
+      namespace: kube-system
+    path: metrics-server/patches/helm-release-patch.yaml
+  - target:
+      kind: HelmRelease
       name: traefik
       namespace: traefik
     path: traefik/patches/helm-release-patch.yaml
