fix: move Goldilocks and Weave GitOps to infrastructure
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/bases/infrastructure/controllers/kustomization.yaml
+++ b/k8s/bases/infrastructure/controllers/kustomization.yaml
@@ -6,9 +6,11 @@ resources:
   - cilium/
   - cloudnative-pg/
   - dex/
+  - goldilocks/
   - kyverno/
   - oauth2-proxy/
   - reloader/
   - traefik/
   - vertical-pod-autoscaler/
+  - weave-gitops/
   # - trivy-operator/
