fix(homepage): add emptyDir volume for logs in HelmRelease fix(ksail): remove timeout from connection spec
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/bases/apps/homepage/helm-release.yaml
+++ b/k8s/bases/apps/homepage/helm-release.yaml
@@ -49,6 +49,8 @@ spec:
       - name: config
         configMap:
           name: config
+      - name: logs
+        emptyDir: {}
     volumeMounts:
       - mountPath: /app/config/custom.js
         name: config
