--- a/k8s/bases/apps/homepage/helm-release.yaml
+++ b/k8s/bases/apps/homepage/helm-release.yaml
@@ -11,7 +11,7 @@ spec:
   chart:
     spec:
       chart: homepage
-      version: 2.1.0
+      version: 4.0.0
       sourceRef:
         kind: HelmRepository
         name: homepage
@@ -30,119 +30,47 @@ spec:
   # https://simpleicons.org
   # https://pictogrammers.com/library/mdi/
   # ---
-  # https://github.com/jameswynn/helm-charts/blob/main/charts/homepage/values.yaml
+  # https://github.com/M0NsTeRRR/helm-charts/blob/main/charts/homepage/values.yaml
   values:
-    enableRbac: true
-    serviceaccount:
-      create: true
-    ingress:
-      main:
-        enabled: true
-        hosts:
-          - host: ${domain}
-            paths:
-              - path: /
-                pathType: Prefix
-        annotations:
-          traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
-    env:
-      - name: HOMEPAGE_ALLOWED_HOSTS
-        value: ${domain}
+    replicaCount: ${homepage_replicas:=2}
     config:
-      kubernetes:
-        mode: cluster
-      settingsString: |
-        title: Platform
-        favicon: https://devantler.tech/assets/images/author.png
-        theme: dark
-        color: slate
-        background:
-          image: https://images.unsplash.com/photo-1478760329108-5c3ed9d495a0?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-          blur: sm
-          opacity: 70
-        layout:
-          Kubernetes:
-          Cloud:
-          Network:
-          Storage:
-          Monitoring:
-          Analytics:
-      widgets:
-        - logo:
-            icon: https://devantler.tech/assets/images/author.png
-        # - longhorn:
-        #     expanded: true
-        #     total: true
-        #     labels: false
-        #     nodes: false
-      services:
-        - Kubernetes:
-            - Omni:
-                icon: si-talos-#FF7300
-                href: https://devantler.omni.siderolabs.io
-                description: Platform for provisioning and managing Talos Linux clusters.
-        - Cloud:
-            - Hetzner Cloud:
-                icon: hetzner
-                href: https://console.hetzner.cloud/projects
-                description: Hetzner Cloud infrastructure provider.
-        - Network:
-            - Cloudflare:
-                icon: cloudflare
-                href: https://dash.cloudflare.com
-                description: Central hub for managing public networking, e.g. FQDN, DNS and remote tunneling.
-                widget:
-                  type: cloudflared
-                  accountid: ${cloudflare_account_id}
-                  tunnelid: ${cloudflared_tunnel_id}
-                  key: ${cloudflare_api_token}
-            - UniFi:
-                icon: unifi
-                href: https://unifi.ui.com
-                description: Central hub for managing on-prem UniFi network infrastructure.
-        - Analytics:
-            - Disqus:
-                icon: si-disqus-#2E9FFF
-                href: https://disqus.com
-                description: Platform to track and moderate embedded comments on my sites.
-            - Google Analytics:
-                icon: google-analytics
-                href: https://analytics.google.com
-                description: Web analytics service.
-        - Monitoring:
-            - Grafana:
-                icon: grafana
-                href: https://devantler.grafana.net
-                description: Central hub for monitoring my infrastructure.
-      bookmarks:
-        - Personal:
-            - Personal Site:
-                - icon: github-light
-                  href: https://devantler.tech
-        - Developer Platforms:
-            - GitHub:
-                - icon: github-light
-                  href: https://github.com
-            - Codecov:
-                - icon: si-codecov-#F01F7A
-                  href: https://app.codecov.io
-            - Renovate:
-                - icon: si-renovatebot-#007fa0
-                  href: https://developer.mend.io
-        - Kubernetes:
-            - ArtifactHUB:
-                - icon: si-artifacthub-#417598
-                  href: https://artifacthub.io
-            - CRD Docs:
-                - icon: si-kubernetes-#326CE5
-                  href: https://doc.crds.dev
-            - Network Policy Editor:
-                - icon: si-kubernetes-#326CE5
-                  href: https://editor.networkpolicy.io
-        - Package Registries:
-            - Docker Hub:
-                - icon: docker
-                  href: https://hub.docker.com
-            - NuGet:
-                - icon: si-nuget-#1088d6
-                  href: https://www.nuget.org
+      allowedHosts:
+        - ${domain}
+    ingress:
+      enabled: true
+      hosts:
+        - host: ${domain}
+          paths:
+            - path: /
+              pathType: ImplementationSpecific
+      annotations:
+        traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
+    volumes:
+      - name: config
+        configMap:
+          name: config
+    volumeMounts:
+      - mountPath: /app/config/custom.js
+        name: config
+        subPath: custom.js
+      - mountPath: /app/config/custom.css
+        name: config
+        subPath: custom.css
+      - mountPath: /app/config/bookmarks.yaml
+        name: config
+        subPath: bookmarks.yaml
+      - mountPath: /app/config/docker.yaml
+        name: config
+        subPath: docker.yaml
+      - mountPath: /app/config/kubernetes.yaml
+        name: config
+        subPath: kubernetes.yaml
+      - mountPath: /app/config/services.yaml
+        name: config
+        subPath: services.yaml
+      - mountPath: /app/config/settings.yaml
+        name: config
+        subPath: settings.yaml
+      - mountPath: /app/config/widgets.yaml
+        name: config
+        subPath: widgets.yaml
