--- a/k8s/bases/apps/homepage/config-map.yaml
+++ b/k8s/bases/apps/homepage/config-map.yaml
@@ -66,7 +66,7 @@ data:
             href: https://devantler.grafana.net
             description: Central hub for monitoring my infrastructure.
         - BetterStack:
-            icon: codeberg
+            icon: https://cdn.brandfetch.io/idzOqqi9J1/w/400/h/400/theme/dark/icon.jpeg
             href: https://telemetry.betterstack.com/
             description: Central hub for monitoring my infrastructure.
   bookmarks.yaml: |
