--- a/ksail.yaml
+++ b/ksail.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   connection:
     context: kind-local
+    timeout: 3m
   project:
     kustomizationPath: k8s/clusters/local
     deploymentTool: Flux
