--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,8 +2,6 @@ name: Deploy
 
 on:
   push:
-    branches-ignore:
-      - 'gh-readonly-queue/**'
     tags:
       - 'v*'
   workflow_dispatch:
@@ -18,16 +16,8 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  wait-for-workflow:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Wait for previous job to finish
-        uses: ahmadnassri/action-workflow-queue@v1
-        with:
-          timeout: 1800000 # 30 minutes
-
   deploy-dev:
-    needs: wait-for-workflow
+    if: github.event_name != 'merge_group'
     uses: devantler-tech/github-actions/.github/workflows/gitops-deploy.yaml@main
     secrets: inherit
     with:
