--- a/.github/workflows/sync-labels.yaml
+++ b/.github/workflows/sync-labels.yaml
@@ -9,4 +9,11 @@ permissions:
 
 jobs:
   sync-labels:
-    uses: devantler-tech/github-actions/.github/workflows/sync-labels.yaml@main
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📑 Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+      - name: 🔄 Sync labels
+        uses: devantler-tech/github-actions/composite-actions/sync-labels-action@b119b9fc03d4ca7cdff1b8ac64ee50034a267a88 # v1.8.0
