fix: add environment specification for bootstrap and deploy jobs in workflow
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,6 +19,7 @@ concurrency:
 jobs:
   bootstrap-dev:
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - name: No-op
         run: echo "Only run this job if the merge queue is triggered"
@@ -26,6 +27,7 @@ jobs:
   deploy-dev:
     needs: bootstrap-dev
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - name: No-op
         run: echo "Only run this job if the merge queue is triggered"
