feat: add CI and CD workflows for deployment processes
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/.github/workflows/ci-deploy.yaml
+++ b/.github/workflows/ci-deploy.yaml
@@ -1,6 +1,9 @@
-name: CD - Deploy (Merge Queue)
+name: CI - Deploy
 
 on:
+  pull_request:
+    branches:
+      - 'main'
   merge_group:
 
 permissions:
@@ -10,15 +13,16 @@ permissions:
 jobs:
   bootstrap-dev:
     uses: devantler-tech/reusable-workflows/.github/workflows/cd-cluster-bootstrap.yaml@fbfd051d3029c9f8d2bb64a87a329c824241fc36 # v1.1.6
+    if: github.event_name == 'merge_group'
     with:
       DEPLOYMENT_ENV: dev
     secrets:
       KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       SOPS_AGE_KEY: ${{ secrets.SOPS_AGE_KEY }}
-
   deploy-dev:
     needs: bootstrap-dev
     uses: devantler-tech/reusable-workflows/.github/workflows/cd-gitops-deploy.yaml@fbfd051d3029c9f8d2bb64a87a329c824241fc36 # v1.1.6
+    if: github.event_name == 'merge_group'
     with:
       DEPLOYMENT_ENV: dev
     secrets:
