fix(deps): update oauth2-proxy redirect URL and forward-auth address
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/k8s/bases/infrastructure/controllers/oauth2-proxy/helm-release.yaml
+++ b/k8s/bases/infrastructure/controllers/oauth2-proxy/helm-release.yaml
@@ -30,6 +30,7 @@ spec:
         github_users = ["devantler"]
         email_domains = [ "*" ]
         cookie_domains=[".${domain}"]
+        redirect_url = "https://oauth2-proxy.${domain}/oauth2/callback"
         upstreams = [ "static://202" ]
         skip_provider_button = true
         reverse_proxy = true
