--- a/k8s/distributions/kind/infrastructure/controllers/coredns/corefile-config-map.yaml
+++ b/k8s/distributions/kind/infrastructure/controllers/coredns/corefile-config-map.yaml
@@ -1,4 +1,3 @@
-# TODO: Fix dns to rewrite external domain names to internal service names
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -12,7 +11,7 @@ data:
         lameduck 5s
       }
       ready
-      rewrite name regex (.*)\.${domain_regex} {2}.{2}.svc.cluster.local answer auto
+      rewrite name regex (.*)\.${domain_regex} traefik.traefik.svc.cluster.local answer auto
       kubernetes cluster.local in-addr.arpa ip6.arpa {
         pods insecure
         fallthrough in-addr.arpa ip6.arpa
