--- a/k8s/bases/infrastructure/middlewares/forward-auth/forward-auth.yaml
+++ b/k8s/bases/infrastructure/middlewares/forward-auth/forward-auth.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: traefik
 spec:
   forwardAuth:
-    address: https://oauth2-proxy.${domain}/
+    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/
     trustForwardHeader: true
     authResponseHeaders:
       - X-Auth-Request-Access-Token
