--- a/k8s/distributions/kind/infrastructure/controllers/kustomization.yaml
+++ b/k8s/distributions/kind/infrastructure/controllers/kustomization.yaml
@@ -3,8 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../../../bases/infrastructure/controllers/
-  # TODO: Add coredns to the kind distribution once the rewrite issue is resolved
-  #- coredns/
+  - coredns/
 patches:
   - target:
       kind: HelmRelease
