chore: remove extension recommendation for GitOps tools
Signed-off-by: GitHub <noreply@github.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,7 +4,6 @@
     "ms-azuretools.vscode-docker",
     "redhat.vscode-yaml",
     "signageos.signageos-vscode-sops",
-    "timonwong.shellcheck",
-    "weaveworks.vscode-gitops-tools"
+    "timonwong.shellcheck"
   ]
 }
